@@ -3,6 +3,10 @@ LIST OF CHANGES
  - Remove live tests for st::api::lims XML driver and other XML-based APIs.
    The CI tests are mostly run on hosts with no access to either production
    or development hosts. 
+ - NPG_TEST_TRACKING_CONFIGPATH environment variable can be used to set a
+   custom location of the Clearpress configuration file for unit tests.
+   The default location of the file, data/config.ini, is used if the
+   variable is unset. 
 
 release 91.13.0
  - Extend npg_status2file script to optionally save statuses to the tracking
